--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "2.3-01-react-filter-map-reduce",
+  "name": "2.3-01-product-list",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
